[package]
name = "esp"
version = "0.1.0"
authors = ["Kirill Dudnik <prog.me.2017@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44.1"
anyhow = "1.0.86"
embedded-hal = "1.0.0"
esp-idf-sys = "0.35.0"
hd44780-driver = "0.4.0" # Driver for HD44780 based LCDs
rgb = "0.8.29"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "0.32.0"
uuid   = { version = "=1.9.1", features = ["v4"] }
anyhow = "1.0.86"
toml-cfg = "0.2.0"
